fix form spacing

--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -1,7 +1,8 @@
 .form {
   // background: lightblue;
   margin: 0 auto;
-  margin-top: 80px;
+  // margin-top: 80px;
+  padding: 80px 0;
   width: 100%;
 }
 
